# inconsistent-replication-ir

./: .gitignore  Cargo.toml  README.adoc  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs  linearizable_compute.rs
src/: client.rs  debug.rs  io.rs  lib.rs  server.rs  types.rs  utils.rs
src/client/: mod.rs
src/client/test/: inconsistent.rs  membership.rs  mod.rs
src/io/: mod.rs
src/io/test_utils/: fake_network.rs  fake_storage.rs  mock_computers.rs  mock_network.rs  mock_record_store.rs  mock_storage.rs  mod.rs
src/server/: mod.rs
src/server/test/: consistent.rs  inconsistent.rs  mod.rs  on_init.rs  process_incoming_operations.rs  propose.rs
