[package]
name = "inconsistent-replication-ir"
version = "0.1.0"
edition = "2021"

[features]
# Enable the test structs from the crate
test = []

[dependencies]
futures = "0.3.30"
tokio = { version = "1.40.0", features = ["sync"] }
tokio-macros = "2.4.0"

[dev-dependencies]
tokio = { version = "1.40.0", features = ["full"] }
