[package]
name = "inconsistent-replication-ir-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1.3.2", features = ["derive"] }
smol = "2.0.2"

[dependencies.inconsistent-replication-ir]
path = ".."
features = ["test"]

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
bench = false

